--- a/sass/mediaQueries/indexMediaQs.scss
+++ b/sass/mediaQueries/indexMediaQs.scss
@@ -184,7 +184,7 @@
             flex-direction: column;
             align-items: flex-start;
             width: 52%;
-            margin-bottom: 7.2rem;
+            margin-bottom: 0rem;
     
             &-heading {
                 margin: 0;
